// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`CockpitApp layout matches the expected frame at a fixed size 1`] = `
"┌─Claude Code──────────────────────────────────────────────────────────────────┐
│ No messages yet. Type a prompt to start the conversation.                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌─Prompt───────────────────────────────────────────────────────────────────────┐
│ Enter sends, Shift+Enter adds a line, Esc interrupts                         │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 ▸ Claude Code: idle    Codex: idle                          ^O swap ^, F1 help 
"
`;

exports[`CockpitApp keymap matches the cockpit frame with settings open: settings-open 1`] = `
"┌─Claude Code──────────────────────────────────────────────────────────────────┐
│ No messages yet. Type a prompt to start the conversation.                    │
│     ┌─Settings─────────────────────────────────────────────────────────┐     │
│     │ [Theme]  Applies immediately                                     │     │
│     │                                                                  │     │
│     │ ▸ Auto                                                           │     │
│     │   Light                                                          │     │
│     │   Dark                                                           │     │
│     │   Catppuccin Mocha                                               │     │
│     │   Catppuccin Latte                                               │     │
│     │                                                                  │     │
│     │ ↑↓ move  Tab switch tab  r reset  Esc close                      │     │
│     └──────────────────────────────────────────────────────────────────┘     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌─Prompt───────────────────────────────────────────────────────────────────────┐
│ Enter sends, Shift+Enter adds a line, Esc interrupts                         │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 ▸ Claude Code: idle    Codex: idle                          ^O swap ^, F1 help 
"
`;
